[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ships/Ship.gd" id="1_ship"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[node name="Ship" type="Node2D"]
script = ExtResource("1_ship")

[node name="Pivot" type="Node2D" parent="."]

[node name="ShipSprite" type="Sprite2D" parent="Pivot"]

[node name="FacingIndicator" type="Line2D" parent="Pivot"]
points = PackedVector2Array(0, 0, 48, 0)
width = 2.0
default_color = Color(1, 1, 0.5, 0.8)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = 28.0
offset_right = 24.0
offset_bottom = 36.0
min_value = 0.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_1")
